Update readme and doc for the project insta lite test and back update
